<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customerBottomNav"
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/bg_customer_nav"
    android:elevation="8dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="6dp"
>
    <LinearLayout android:id="@+id/navHome" style="@style/CustomerNavItem">
        <ImageView
            android:id="@+id/navHomeIcon"
            style="@style/CustomerNavIcon"
            android:contentDescription="@string/nav_home"
            android:src="@drawable/ic_customer_home"
        />
        <TextView
            android:id="@+id/navHomeLabel"
            style="@style/CustomerNavLabel"
            android:text="@string/nav_home"
        />
    </LinearLayout>
    <LinearLayout android:id="@+id/navServices" style="@style/CustomerNavItem">
        <ImageView
            android:id="@+id/navServicesIcon"
            style="@style/CustomerNavIcon"
            android:contentDescription="@string/nav_services"
            android:src="@drawable/ic_customer_services"
        />
        <TextView
            android:id="@+id/navServicesLabel"
            style="@style/CustomerNavLabel"
            android:text="@string/nav_services"
        />
    </LinearLayout>
    <LinearLayout android:id="@+id/navBookings" style="@style/CustomerNavItem">
        <ImageView
            android:id="@+id/navBookingsIcon"
            style="@style/CustomerNavIcon"
            android:contentDescription="@string/nav_bookings"
            android:src="@drawable/ic_customer_bookings"
        />
        <TextView
            android:id="@+id/navBookingsLabel"
            style="@style/CustomerNavLabel"
            android:text="@string/nav_bookings"
        />
    </LinearLayout>
    <LinearLayout android:id="@+id/navProfile" style="@style/CustomerNavItem">
        <ImageView
            android:id="@+id/navProfileIcon"
            style="@style/CustomerNavIcon"
            android:contentDescription="@string/nav_profile"
            android:src="@drawable/ic_customer_profile"
        />
        <TextView
            android:id="@+id/navProfileLabel"
            style="@style/CustomerNavLabel"
            android:text="@string/nav_profile"
        />
    </LinearLayout>
</LinearLayout>
